<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.login_activity.LoginActivity">

    <LinearLayout
            android:padding="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_marginTop="28dp"
                android:textStyle="bold"
                android:textSize="28sp"
                android:text="@string/info_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:text="@string/lorem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <ProgressBar
                android:id="@+id/loading"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="8dp"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/hint_email"
                app:boxBackgroundColor="@android:color/transparent"
                app:errorEnabled="true"
                android:id="@+id/in_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/et_email"
                    android:inputType="textEmailAddress"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/hint_password"
                app:boxBackgroundColor="@android:color/transparent"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                android:id="@+id/in_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/et_password"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:id="@+id/btn_login"
                android:text="@string/btn_login"
                android:layout_height="56dp"/>
        <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:id="@+id/btn_goto_register"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:text="@string/btn_not_have"
                android:layout_height="56dp"/>

    </LinearLayout>

</ScrollView>