<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.register_activity.RegisterActivity">

    <LinearLayout
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:textSize="28sp"
                android:layout_marginTop="36dp"
                android:text="@string/info_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:text="@string/lorem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <ProgressBar
                android:id="@+id/loading"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:hint="@string/hint_name"
                app:errorEnabled="true"
                android:id="@+id/in_name"
                app:boxBackgroundColor="@android:color/transparent"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:id="@+id/et_name"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:hint="@string/hint_email"
                app:errorEnabled="true"
                android:id="@+id/in_email"
                app:boxBackgroundColor="@android:color/transparent"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:id="@+id/et_email"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:hint="@string/hint_password"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                android:id="@+id/in_password"
                app:boxBackgroundColor="@android:color/transparent"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:id="@+id/et_password"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:hint="Konfirmasi password"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                android:id="@+id/in_confirm_password"
                app:boxBackgroundColor="@android:color/transparent"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:id="@+id/et_confirm_password"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:id="@+id/btn_register"
                android:text="@string/btn_register"
                android:layout_height="56dp"/>
    </LinearLayout>

</ScrollView>